@@ -6,3 +6,4 @@ by Sun:     #908946 - Partial clean up of Drupal 7 port.
 by Jacine:  #917540 - Added Support the FAPI #weight attribute.
 by Jacine:  #942292 - Adding Advanced Help needs to 7.x branch.
 by moonray: #943008 - Fix for block_skinr_preprocess_hook_callback() never returning alternate block hooks.
+by sun:     #908946 - Fixed skinr.install schema, update functions and added the first Skinr SimpleTest!  Yay :D
